force-app/main/default/objects/Case/fields/Service_Note__c.field-meta.xml
<CustomField>
    <fullName>Service_Note__c</fullName>
    <label>Service Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>