force-app/main/default/objects/Case/fields/Stato_NC__c.field-meta.xml
<CustomField>
    <fullName>Stato_NC__c</fullName>
    <label>Stato NC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aperto</fullName>
            </value>
            <value>
                <fullName>Chiuso</fullName>
            </value>
            <value>
                <fullName>In Lavorazione</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>