force-app/main/default/objects/Case/fields/Status_notifica__c.field-meta.xml
<CustomField>
    <fullName>Status_notifica__c</fullName>
    <label>Status notifica</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bozza</fullName>
            </value>
            <value>
                <fullName>Invia notifica</fullName>
            </value>
            <value>
                <fullName>Notifica inviata</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>