force-app/main/default/objects/Case/fields/Team_Viewer_ID__c.field-meta.xml
<CustomField>
    <fullName>Team_Viewer_ID__c</fullName>
    <label>Team Viewer ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>