force-app/main/default/objects/Case/fields/Tecnico_incaricato__c.field-meta.xml
<CustomField>
    <fullName>Tecnico_incaricato__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tecnico incaricato</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases (Tecnico incaricato)</relationshipLabel>
    <relationshipName>Cases3</relationshipName>
    <type>Lookup</type>
</CustomField>