force-app/main/default/objects/Case/fields/Telefono_Offerta__c.field-meta.xml
<CustomField>
    <fullName>Telefono_Offerta__c</fullName>
    <label>Telefono</label>
    <type>Phone</type>
</CustomField>