force-app/main/default/objects/Case/fields/Tempo_di_resa__c.field-meta.xml
<CustomField>
    <fullName>Tempo_di_resa__c</fullName>
    <label>Lavorazione/Programmazione materiale</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>