force-app/main/default/objects/Case/fields/Tipo_NC__c.field-meta.xml
<CustomField>
    <fullName>Tipo_NC__c</fullName>
    <label>Tipo NC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cliente</fullName>
            </value>
            <value>
                <fullName>Fornitore</fullName>
            </value>
            <value>
                <fullName>Interna</fullName>
            </value>
            <value>
                <fullName>Terzista</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>