force-app/main/default/objects/Case/fields/Tipologia_Intervento__c.field-meta.xml
<CustomField>
    <fullName>Tipologia_Intervento__c</fullName>
    <label>Tipologia Intervento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assistenza</fullName>
                <label>Assistenza/Riparazione</label>
            </value>
            <value>
                <fullName>Modifica</fullName>
                <label>Modifica/Aggiornamento</label>
            </value>
            <value>
                <fullName>Consulenza Tecnica</fullName>
                <label>Consulenza Tecnica/Corso</label>
            </value>
            <value>
                <fullName>Installazione</fullName>
            </value>
            <value>
                <fullName>Fiera</fullName>
            </value>
            <value>
                <fullName>Taratura/Manutenzione</fullName>
            </value>
            <value>
                <fullName>Seminari/Formazione interna</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>