force-app/main/default/objects/Case/fields/Totale_Righe_Ricambi_Ordine__c.field-meta.xml
<CustomField>
    <fullName>Totale_Righe_Ricambi_Ordine__c</fullName>
    <label>Totale Righe Ricambi Ordine</label>
    <summarizedField>Ricambi_Caso__c.Totale__c</summarizedField>
    <summaryFilterItems>
        <field>Ricambi_Caso__c.Tipo_Riga__c</field>
        <operation>equals</operation>
        <value>Ordine</value>
    </summaryFilterItems>
    <summaryForeignKey>Ricambi_Caso__c.Case__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>