force-app/main/default/objects/Case/fields/Tracking_Nr__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Nr__c</fullName>
    <label>Tracking Nr.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>