force-app/main/default/objects/Case/fields/Warranty_formula__c.field-meta.xml
<CustomField>
    <fullName>Warranty_formula__c</fullName>
    <formula>Asset_Final_Customer__r.Warranty_Expiration__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expiration Warranty</label>
    <type>Date</type>
</CustomField>