force-app/main/default/objects/Case/fields/Warranty_Status__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Status__c</fullName>
    <formula>IMAGE(
IF(  Asset_Final_Customer__r.Garanzia_attiva__c  = 1, &quot;/img/samples/flag_green.gif&quot;, &quot;/img/samples/flag_red.gif&quot;),
&quot;priority flag&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warranty Status</label>
    <type>Text</type>
</CustomField>