force-app/main/default/objects/Case/fields/Warranty_Status_checkbox__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Status_checkbox__c</fullName>
    <formula>IF( Asset_Final_Customer__r.Garanzia_attiva__c = 1, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warranty Status (checkbox)</label>
    <type>Checkbox</type>
</CustomField>