force-app/main/default/objects/Case/fields/Warranty_Status_text_formula__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Status_text_formula__c</fullName>
    <formula>IF( Asset_Final_Customer__r.Garanzia_attiva__c = 1, &quot;True&quot;, &quot;False&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warranty Status (text formula)</label>
    <type>Text</type>
</CustomField>