force-app/main/default/objects/Case/recordTypes/Academy.recordType-meta.xml
<RecordType>
    <fullName>Academy</fullName>
    <active>true</active>
    <businessProcess>Academy</businessProcess>
    <label>Academy</label>
</RecordType>