force-app/main/default/objects/Case/listViews/Case_Silvia.listView-meta.xml
<ListView>
    <fullName>Case_Silvia</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Asset_Final_Customer__c</columns>
    <columns>Account_Final_Customer__c</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>Nuova_Email_Da_Gestire__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CASES.CLOSED_DATE</columns>
    <columns>Data_Ora_Ultima_Mail__c</columns>
    <columns>Team_Viewer_ID__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>sde l</value>
    </filters>
    <label>07) Cases: Silvia</label>
</ListView>