force-app/main/default/objects/Case/listViews/Coda_Academy.listView-meta.xml
<ListView>
    <fullName>Coda_Academy</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>Coda Academy</label>
    <queue>Coda_Academy</queue>
</ListView>