force-app/main/default/objects/Case/listViews/Coda_Casi.listView-meta.xml
<ListView>
    <fullName>Coda_Casi</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>Nuova_Email_Da_Gestire__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Lack_of_training__c</columns>
    <columns>Lack_of_quality__c</columns>
    <filterScope>Queue</filterScope>
    <label>03) Coda Casi</label>
    <queue>Coda_Casi</queue>
</ListView>