force-app/main/default/objects/Case/listViews/MyCases.listView-meta.xml
<ListView>
    <fullName>MyCases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>Nuova_Email_Da_Gestire__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CLOSED</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CASES.CLOSED_DATE</columns>
    <columns>Data_Ora_Ultima_Mail__c</columns>
    <filterScope>Mine</filterScope>
    <label>01) My Cases</label>
</ListView>