force-app/main/default/objects/Case/listViews/partner_portal_cases.listView-meta.xml
<ListView>
    <fullName>partner_portal_cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Asset_Vici__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER_NAME</field>
        <operation>contains</operation>
        <value>portal</value>
    </filters>
    <label>18) Partner portal cases</label>
</ListView>