force-app/main/default/objects/Case/listViews/total_Academy_case_CY.listView-meta.xml
<ListView>
    <fullName>total_Academy_case_CY</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.REASON</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>Opportunity__c</columns>
    <columns>CASES.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Academy</value>
    </filters>
    <label>Academy cases CY</label>
</ListView>