force-app/main/default/objects/Case/listViews/X01_My_Open_Cases.listView-meta.xml
<ListView>
    <fullName>X01_My_Open_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Asset_Final_Customer__c</columns>
    <columns>Account_Final_Customer__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>Nuova_Email_Da_Gestire__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CLOSED</columns>
    <columns>Team_Viewer_ID__c</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CASES.CLOSED_DATE</columns>
    <columns>Data_Ora_Ultima_Mail__c</columns>
    <columns>Expected_Close_Date__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>02) My Open Cases</label>
</ListView>